--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,10 @@
+# Temporary files
+resources/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
 *$py.class
-
 # C extensions
 *.so
 
